# financialtrading

./: README.md  setupenv.ps1  setupenv.sh  tokeninfo.json
financialtrading/: pyproject.toml
financialtrading/src/: IWDA.AS.csv  app.py  assettypes.json  candidate_etfs.txt  candidate_stocks.txt  exchanges.json  gettoken.py  scanner.py  stocks.json  tokeninfo.json  tokenmanager.py  yfinanceiwda.py
financialtrading/src/backtester/: main.py  mainstep.py
financialtrading/src/old/: backtester.py  main.py
financialtrading/src/old/scanner_class/: etfs.json  main.py
financialtrading/src/scanner/: flaskserverworker.py  main.py  mainwindow.py  scanner.py  tokenmanager.py  utils.py
financialtrading/src/scanner/data/: candidate_etfs.xlsx  candidate_stocks.xlsx  tokeninfo.json
